# MacroNoMore

./: .gitignore  CMakeLists.txt  MacroNoMore.cpp  README.md
test/: ofs.cpp  ori.cpp
